--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
 	<properties>
 		<java.version>17</java.version>
 		<jackson.version>2.15.2</jackson.version>
-		<ms-sql.version>11.2.3.jre17</ms-sql.version>
+		<ms-sql.version>12.2.0.jre11</ms-sql.version>
 		<spring-boot-starter-jdbc.version>3.1.2</spring-boot-starter-jdbc.version>
 		<spring-jdbc.version>6.0.11</spring-jdbc.version>
 	</properties>
@@ -37,11 +37,15 @@
 			<artifactId>spring-jdbc</artifactId>
 			<version>${spring-jdbc.version}</version>
 		</dependency>
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-tomcat</artifactId>
 			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
