--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
 		<npm.version>10.2.3</npm.version>
 		<node.version>v20.10.0</node.version>
 		<maven-resources-plugin.version>3.3.1</maven-resources-plugin.version>
+		<artifactId>quik</artifactId>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -99,11 +100,13 @@
 	</dependencies>
 	<build>
 		<sourceDirectory>Backend/src</sourceDirectory>
+		<finalName>${artifactId}</finalName>
+
 		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
+<!--			<plugin>-->
+<!--				<groupId>org.springframework.boot</groupId>-->
+<!--				<artifactId>spring-boot-maven-plugin</artifactId>-->
+<!--			</plugin>-->
 			<plugin>
 				<groupId>com.github.eirslett</groupId>
 				<artifactId>frontend-maven-plugin</artifactId>
@@ -226,6 +229,22 @@
 <!--					</execution>-->
 <!--				</executions>-->
 <!--			</plugin>-->
+
+<!--			<plugin>-->
+<!--				<groupId>org.apache.tomcat.maven</groupId>-->
+<!--				<artifactId>tomcat6-maven-plugin</artifactId>-->
+<!--				<version>2.2</version>-->
+<!--			</plugin>-->
+			<plugin>
+				<groupId>org.apache.tomcat.maven</groupId>
+				<artifactId>tomcat7-maven-plugin</artifactId>
+				<version>2.2</version>
+				<configuration>
+					<path>/war-plugin</path>
+					<warSourceDirectory>${project.build.directory}/${project.build.finalName}</warSourceDirectory>
+				</configuration>
+			</plugin>
+
 		</plugins>
 	</build>
 
