--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
@@ -13,10 +13,14 @@
     "@tanstack/react-query": "^5.12.2",
     "@tanstack/react-query-devtools": "^5.13.3",
     "axios": "^1.6.2",
+    "i18next": "^23.7.8",
+    "i18next-http-backend": "^2.4.2",
+    "i18next-resources-to-backend": "^1.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
     "react-hot-toast": "^2.4.1",
+    "react-i18next": "^13.5.0",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.20.1",
     "styled-components": "^6.1.1"
