--- a/Backend/resources/application.properties
+++ b/Backend/resources/application.properties
@@ -1,4 +1,4 @@
-server.servlet.context-path=/quik
+#server.servlet.context-path=/quik
 server.port=8080
 #spring.mvc.converters.preferred-json-mapper=gson
 #spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
