--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -8,7 +8,7 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "json-server": "json-server --watch data/renews.json --port 9000"
+    "json-server": "json-server --watch data/database.json --port 9000"
   },
   "dependencies": {
     "@tanstack/react-query": "^5.12.2",
