--- a/Backend/resources/application.properties
+++ b/Backend/resources/application.properties
@@ -3,4 +3,6 @@ server.port=8080
 #spring.mvc.converters.preferred-json-mapper=gson
 #spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 #server.tomcat.redirect-context-root=false
- 
+spring.jackson.visibility.field=ANY
+#spring.jackson.visibility.getter=NONE
+#spring.jackson.visibility.setter=NONE
