--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -8,7 +8,7 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "json-server": "json-server --watch data/database.json --port 9000",
+    "json-server": "json-server -H 0.0.0.0  --watch data/database.json --port 9000",
     "http-server": "http-server -o public/assets"
   },
   "dependencies": {
