--- a/Backend/resources/application.properties
+++ b/Backend/resources/application.properties
@@ -6,3 +6,12 @@ server.port=8080
 spring.jackson.visibility.field=ANY
 #spring.jackson.visibility.getter=NONE
 #spring.jackson.visibility.setter=NONE
+springdoc.show-actuator=true
+springdoc.use-management-port=true
+#management.server.port=9090
+spring.devtools.restart.log-condition-evaluation-delta=false
+management.endpoints.web.exposure.include=openapi, swagger-ui
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.api-docs.path=/api-docs
+# This property enables the openapi and swagger-ui endpoints to be exposed beneath the actuator base path.
+#management.endpoints.web.exposure.include=openapi, swagger-ui
