--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,9 +12,13 @@
     "http-server": "http-server -o public/assets"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
     "@tanstack/react-query": "^5.12.2",
     "@tanstack/react-query-devtools": "^5.13.3",
     "axios": "^1.6.2",
+    "framer-motion": "^10.18.0",
     "i18next": "^23.7.8",
     "i18next-http-backend": "^2.4.2",
     "i18next-resources-to-backend": "^1.2.0",
