comment npm build for now-the are bug

--- a/pom.xml
+++ b/pom.xml
@@ -186,9 +186,9 @@
                         <goals>
                             <goal>npm</goal>
                         </goals>
-                        <configuration>
-                            <arguments>run build</arguments>
-                        </configuration>
+                        <!--                        <configuration>-->
+                        <!--                            <arguments>run build</arguments>-->
+                        <!--                        </configuration>-->
                     </execution>
                 </executions>
 
