fix bug on init datasource

--- a/Backend/resources/application.properties
+++ b/Backend/resources/application.properties
@@ -8,6 +8,10 @@ spring.jackson.visibility.field=ANY
 #spring.jackson.visibility.setter=NONE
 springdoc.show-actuator=true
 #management.server.port=9090
+#fix url not found bug on ms-sql datasource
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
+#spring.jpa.properties.hibernate.hbm2ddl.auto=validate
+#spring.jpa.hibernate.ddl-auto=validate
 spring.devtools.restart.log-condition-evaluation-delta=false
 management.endpoints.web.exposure.include=openapi, swagger-ui
 springdoc.swagger-ui.path=/swagger-ui.html
