--- a/Backend/resources/application.properties
+++ b/Backend/resources/application.properties
@@ -1,4 +1,4 @@
-#server.servlet.context-path=/quik
+server.servlet.context-path=/quik
 server.port=8080
 #spring.mvc.converters.preferred-json-mapper=gson
 #spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
@@ -18,3 +18,9 @@ springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.api-docs.path=/api-docs
 # This property enables the openapi and swagger-ui endpoints to be exposed beneath the actuator base path.
 #management.endpoints.web.exposure.include=openapi, swagger-ui
+# Logging pattern for the console
+#logging.pattern.console="%d{yyyy-MM-dd HH:mm:ss} - %msg%n"
+## Logging pattern for file
+#logging.pattern.file="%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
+##output to a temp_folder/file(give your file path here)
+#logging.file.name=../logs-spring/mylog.log
