--- a/pom.xml
+++ b/pom.xml
@@ -186,24 +186,6 @@
                 <version>${maven-resources-plugin.version}</version>
                 <executions>
                     <execution>
-                        <id>copy-resources-backend-files</id>
-                        <phase>process-resources</phase>
-                        <goals>
-                            <goal>copy-resources</goal>
-                        </goals>
-                        <configuration>
-                            <outputDirectory>${basedir}/target/classes</outputDirectory>
-                            <resources>
-                                <resource>
-                                    <directory>${basedir}/Backend/resources</directory>
-                                    <includes>
-                                        <include>**/*.*</include>
-                                    </includes>
-                                </resource>
-                            </resources>
-                        </configuration>
-                    </execution>
-                    <execution>
                         <id>copy-resources-frontend-files</id>
                         <phase>process-resources</phase>
                         <goals>
@@ -211,7 +193,7 @@
                         </goals>
                         <configuration>
                             <overwrite>true</overwrite>
-                            <outputDirectory>${basedir}/target/classes/static</outputDirectory>
+                            <outputDirectory>${basedir}/Backend/resources/static</outputDirectory>
                             <resources>
                                 <resource>
                                     <directory>${basedir}/Frontend/dist</directory>
@@ -222,6 +204,25 @@
                             </resources>
                         </configuration>
                     </execution>
+                    <!--                    <execution>-->
+                    <!--                        <id>copy-resources-backend-files</id>-->
+                    <!--                        <phase>process-resources</phase>-->
+                    <!--                        <goals>-->
+                    <!--                            <goal>copy-resources</goal>-->
+                    <!--                        </goals>-->
+                    <!--                        <configuration>-->
+                    <!--                            <outputDirectory>${basedir}/target/classes</outputDirectory>-->
+                    <!--                            <resources>-->
+                    <!--                                <resource>-->
+                    <!--                                    <directory>${basedir}/Backend/resources</directory>-->
+                    <!--                                    <includes>-->
+                    <!--                                        <include>**/*.*</include>-->
+                    <!--                                    </includes>-->
+                    <!--                                </resource>-->
+                    <!--                            </resources>-->
+                    <!--                        </configuration>-->
+                    <!--                    </execution>-->
+                    <!--                   -->
                 </executions>
             </plugin>
 
