--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "json-server": "json-server -H 0.0.0.0  --watch data/database.json --port 9000",
-    "http-server": "http-server -o public/assets"
+    "http-server": "http-server -o public/assets",
+    "tsc": "tsc --noEmit"
   },
   "dependencies": {
     "@chakra-ui/react": "^2.8.2",
