--- a/.gitignore
+++ b/.gitignore
@@ -160,3 +160,5 @@ buildNumber.properties
 Frontend/src/components/side.html
 
 /Backend/resources/static/
+/Frontend/node/
+/Frontend/node_modules/
