--- a/Backend/resources/application.properties
+++ b/Backend/resources/application.properties
@@ -10,6 +10,8 @@ springdoc.show-actuator=true
 #management.server.port=9090
 #fix url not found bug on ms-sql datasource
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
+management.endpoints.jmx.exposure.include=health,info,loggers
+management.endpoint.health.show-details=always
 #spring.jpa.properties.hibernate.hbm2ddl.auto=validate
 #spring.jpa.hibernate.ddl-auto=validate
 spring.devtools.restart.log-condition-evaluation-delta=false
