--- a/pom.xml
+++ b/pom.xml
@@ -26,11 +26,13 @@
         <npm.version>10.2.3</npm.version>
         <node.version>v20.10.0</node.version>
         <lombok.version>1.18.30</lombok.version>
+        <hibernate-validator.version>8.0.1.Final</hibernate-validator.version>
         <maven-resources-plugin.version>3.3.1</maven-resources-plugin.version>
         <artifactId>quik</artifactId>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <start.class>main.server.ServerApplication</start.class>
+
     </properties>
     <dependencies>
         <dependency>
@@ -40,7 +42,7 @@
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-validator</artifactId>
-            <version>8.0.1.Final</version>
+            <version>${hibernate-validator.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -133,57 +135,57 @@
 
         <plugins>
 
-            <plugin>
-                <groupId>com.github.eirslett</groupId>
-                <artifactId>frontend-maven-plugin</artifactId>
-                <version>${frontend-maven-plugin.version}</version>
+            <!--            <plugin>-->
+            <!--                <groupId>com.github.eirslett</groupId>-->
+            <!--                <artifactId>frontend-maven-plugin</artifactId>-->
+            <!--                <version>${frontend-maven-plugin.version}</version>-->
 
-                <executions>
-                    <execution>
-                        <!-- optional: you don't really need execution ids, but it looks nice in your build log. -->
-                        <id>install node and npm</id>
-                        <goals>
-                            <goal>install-node-and-npm</goal>
-                        </goals>
-                        <!-- optional: default phase is "generate-resources" -->
-                        <phase>generate-resources</phase>
-                    </execution>
-                    <execution>
-                        <id>npm install</id>
-                        <goals>
-                            <goal>npm</goal>
-                        </goals>
+            <!--                <executions>-->
+            <!--                    <execution>-->
+            <!--                        &lt;!&ndash; optional: you don't really need execution ids, but it looks nice in your build log. &ndash;&gt;-->
+            <!--                        <id>install node and npm</id>-->
+            <!--                        <goals>-->
+            <!--                            <goal>install-node-and-npm</goal>-->
+            <!--                        </goals>-->
+            <!--                        &lt;!&ndash; optional: default phase is "generate-resources" &ndash;&gt;-->
+            <!--                        <phase>generate-resources</phase>-->
+            <!--                    </execution>-->
+            <!--                    <execution>-->
+            <!--                        <id>npm install</id>-->
+            <!--                        <goals>-->
+            <!--                            <goal>npm</goal>-->
+            <!--                        </goals>-->
 
-                        <!-- optional: default phase is "generate-resources" -->
-                        <phase>generate-resources</phase>
+            <!--                        &lt;!&ndash; optional: default phase is "generate-resources" &ndash;&gt;-->
+            <!--                        <phase>generate-resources</phase>-->
 
-                        <configuration>
-                            <!-- optional: The default argument is actually
-                            "install", so unless you need to run some other npm command,
-                            you can remove this whole <configuration> section.
-                            -->
-                            <arguments>install</arguments>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>npm run build</id>
-                        <phase>generate-resources</phase>
-                        <goals>
-                            <goal>npm</goal>
-                        </goals>
-                        <configuration>
-                            <arguments>run build</arguments>
-                        </configuration>
-                    </execution>
-                </executions>
+            <!--                        <configuration>-->
+            <!--                            &lt;!&ndash; optional: The default argument is actually-->
+            <!--                            "install", so unless you need to run some other npm command,-->
+            <!--                            you can remove this whole <configuration> section.-->
+            <!--                            &ndash;&gt;-->
+            <!--                            <arguments>install</arguments>-->
+            <!--                        </configuration>-->
+            <!--                    </execution>-->
+            <!--                    <execution>-->
+            <!--                        <id>npm run build</id>-->
+            <!--                        <phase>generate-resources</phase>-->
+            <!--                        <goals>-->
+            <!--                            <goal>npm</goal>-->
+            <!--                        </goals>-->
+            <!--                        <configuration>-->
+            <!--                            <arguments>run build</arguments>-->
+            <!--                        </configuration>-->
+            <!--                    </execution>-->
+            <!--                </executions>-->
 
-                <!-- optional -->
-                <configuration>
-                    <nodeVersion>${node.version}</nodeVersion>
-                    <npmVersion>${npm.version}</npmVersion>
-                    <workingDirectory>Frontend</workingDirectory>
-                </configuration>
-            </plugin>
+            <!--                &lt;!&ndash; optional &ndash;&gt;-->
+            <!--                <configuration>-->
+            <!--                    <nodeVersion>${node.version}</nodeVersion>-->
+            <!--                    <npmVersion>${npm.version}</npmVersion>-->
+            <!--                    <workingDirectory>Frontend</workingDirectory>-->
+            <!--                </configuration>-->
+            <!--            </plugin>-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-resources-plugin</artifactId>
