--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -33,6 +33,7 @@
     "styled-components": "^6.1.1"
   },
   "devDependencies": {
+    "@types/node": "^20.14.2",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
