--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -16,6 +16,7 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@reduxjs/toolkit": "^2.2.6",
     "@tanstack/react-query": "^5.12.2",
     "@tanstack/react-query-devtools": "^5.13.3",
     "axios": "^1.6.2",
@@ -29,6 +30,7 @@
     "react-hot-toast": "^2.4.1",
     "react-i18next": "^13.5.0",
     "react-icons": "^4.12.0",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.20.1",
     "styled-components": "^6.1.1"
   },
