--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -19,6 +19,7 @@
     "@reduxjs/toolkit": "^2.2.6",
     "@tanstack/react-query": "^5.12.2",
     "@tanstack/react-query-devtools": "^5.13.3",
+    "async-mutex": "^0.5.0",
     "axios": "^1.6.2",
     "framer-motion": "^10.18.0",
     "i18next": "^23.7.8",
